@@ -11,6 +11,8 @@ class BasicExampleTest(unittest.TestCase):
         c1 = d.Get()
         c1.value = 6
         self.assertEqual(c.value, 6)
+        a = NewA()
+        self.assertEqual(GetA(a), 1)
 
 if __name__ == '__main__':
     unittest.main()     
